2004-12-18  Mike Kestner  <mkestner@novell.com>

	* gconf/GConf/ChangeSet.cs : add internal Handle prop.
	* gconf/GConf/Engine.cs : new class to expose the default gconf engine
	perform changeset commits and reverses.

2004-12-17  Mike Kestner  <mkestner@novell.com>

	* gtk/ListStore.custom : dispose a bunch of GLib.Values.
	* gtk/TreeStore.custom : ditto.  Reworked and expanded from a patch
	by Ben "valgrind-boy" Maurer. [Fixes #69925]

2004-12-17  Mike Kestner  <mkestner@novell.com>

	* glade/XML.custom (BindFields) : support multiple autoconnects
	in different roots by not writing null widgets to the tagged
	fields. [Fixes #68455]

2004-12-17  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide Object and Widget.Destroy.
	* gtk/Object.custom : manual virtual Destroy impl.
	* gtk/Widget.custom : manual virtual Destroy impl.
	* gtk/Window.custom : hold a managed ref for all toplevels. Release
	it in a Destroy override.  Window is frequently subclassed and is
	never parented, so this keeps a managed ref around to avoid GC.
	[Fixes #70120]

2004-12-17  Mike Kestner  <mkestner@novell.com>

	* gdk/Gdk.metadata : mark out param on Window.GetFrameExtents.
	* gdk/WindowAttr.custom : new typed Mask prop.
	* gtk/Widget.custom : new typed WidgetFlags prop. mark Flags obsolete.

2004-12-17  Mike Kestner  <mkestner@novell.com>

	* gtk/Makefile.am : add new file.
	* gtk/glue/makefile.win32 : add missing file.
	* gtk/NodeCellDataFunc.cs : new callback delegate type and marshaler
	for NodeStore tree views using GtkTreeCellDataFuncs.
	* gtk/NodeStore.cs : add internal GetNode overload by TreeIter.
	* gtk/NodeView.cs : add AppendColumn overload that uses data funcs.
	* gtk/TreeViewColumn.custom : manual implementation for SetCellDataFunc
	to support both TreeIter and ITreeNode models.  We need to hold a ref
	to a delegate for each cell renderer on a column. [Fixes #63062]
	* sample/NodeViewDemo.cs : use a NodeCellDataFunc for one of the 
	cell renderers in the tree.
