@@ -1,5 +1,9 @@
 2004-12-18  Mike Kestner  <mkestner@novell.com>
 
+	* generator/Field.cs : add MarshalAs attrs for (u)longs.
+
+2004-12-18  Mike Kestner  <mkestner@novell.com>
+
 	* gconf/GConf/ChangeSet.cs : add internal Handle prop.
 	* gconf/GConf/Engine.cs : new class to expose the default gconf engine
 	perform changeset commits and reverses.
